syntax = "proto3";
package centauri.mint.v1beta1;

import "cosmos/msg/v1/msg.proto";
import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "cosmos_proto/cosmos.proto";
import "centauri/mint/v1beta1/mint.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "x/mint/types";

// Msg defines the x/mint Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc FundModuleAccount(MsgFundModuleAccount)
      returns (MsgFundModuleAccountResponse);
  rpc AddAccountToFundModuleSet(MsgAddAccountToFundModuleSet)
      returns (MsgAddAccountToFundModuleSetResponse);
}

// MsgUpdateParams is the Msg/UpdateParams request type.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name) = "centauri/x/mint/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless
  // overwritten).
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // params defines the x/mint parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2
      [ (gogoproto.nullable) = false, (amino.dont_omitempty) = true ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParamsResponse {}

message MsgFundModuleAccount {
  string from_address = 1;
  repeated cosmos.base.v1beta1.Coin amount = 2 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"amount\"",
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"
  ];
}

message MsgFundModuleAccountResponse {}

// MsgAddAccountToFundModuleSet add account in to allowed fund module set
message MsgAddAccountToFundModuleSet {
  // authority is the address that controls the module (defaults to x/gov unless
  // overwritten).
  string authority = 1 [ (gogoproto.moretags) = "yaml:\"authority\"" ];
  string allowed_address = 2
      [ (gogoproto.moretags) = "yaml:\"allowed_address\"" ];
}

message MsgAddAccountToFundModuleSetResponse {}
